Исправления в файле pom.xml, скорректированы переносы строк в XmlToJsonConverter.transform, конвертеры вынесены в отдельный пакет, использован static import для статических методов классов Comparator и Collectors, убрана ненужная переменная в ConversionService.convert